syntax = "proto3";

package api.user.v1;

import "api/types/types.proto";
//import "validate/validate.proto";

option go_package = "user/api/user/v1;v1";

service course {
  // create course
  rpc Create(CreateCourseRequest) returns (CreateCourseReply) {}

  // delete course by id
  rpc DeleteByID(DeleteCourseByIDRequest) returns (DeleteCourseByIDReply) {}

  // delete course by batch id
  rpc DeleteByIDs(DeleteCourseByIDsRequest) returns (DeleteCourseByIDsReply) {}

  // update course by id
  rpc UpdateByID(UpdateCourseByIDRequest) returns (UpdateCourseByIDReply) {}

  // get course by id
  rpc GetByID(GetCourseByIDRequest) returns (GetCourseByIDReply) {}

  // get course by condition
  rpc GetByCondition(GetCourseByConditionRequest) returns (GetCourseByConditionReply) {}

  // list of course by batch id
  rpc ListByIDs(ListCourseByIDsRequest) returns (ListCourseByIDsReply) {}

  // list of course by query parameters
  rpc List(ListCourseRequest) returns (ListCourseReply) {}
}

// Some notes on defining fields under message:
// Fill in the validate rules https://github.com/envoyproxy/protoc-gen-validate#constraint-rules

message CreateCourseRequest {
	string code = 1;  // 课程代号
	string name = 2;  // 课程名称
	int32 credit = 3;  // 学分
	string college = 4;  // 学院
	string semester = 5;  // 学期
	string time = 6;  // 上课时间
	string place = 7;  // 上课地点
}

message CreateCourseReply {
  uint64   id =1;
}

message DeleteCourseByIDRequest {
  uint64   id =1;
}

message DeleteCourseByIDReply {

}

message DeleteCourseByIDsRequest {
  repeated uint64 ids = 1;
}

message DeleteCourseByIDsReply {

}

message UpdateCourseByIDRequest {
	uint64 id = 1; 
	string code = 2;  // 课程代号
	string name = 3;  // 课程名称
	int32 credit = 4;  // 学分
	string college = 5;  // 学院
	string semester = 6;  // 学期
	string time = 7;  // 上课时间
	string place = 8;  // 上课地点
}

message UpdateCourseByIDReply {

}

message Course {
	uint64 id = 1; 
	int64 createdAt = 2; 
	int64 updatedAt = 3; 
	string code = 4;  // 课程代号
	string name = 5;  // 课程名称
	int32 credit = 6;  // 学分
	string college = 7;  // 学院
	string semester = 8;  // 学期
	string time = 9;  // 上课时间
	string place = 10;  // 上课地点
}

message GetCourseByIDRequest {
  uint64   id =1;
}

message GetCourseByIDReply {
  Course course = 1;
}

message GetCourseByConditionRequest {
  types.Conditions conditions = 1;
}

message GetCourseByConditionReply {
  Course course = 1;
}

message ListCourseByIDsRequest {
  repeated uint64 ids = 1;
}

message ListCourseByIDsReply {
  repeated Course courses = 1;
}

message ListCourseRequest {
  types.Params params = 1;
}

message ListCourseReply {
  int64 total =1;
  repeated Course courses = 2;
}


